# cairo-crosswordle

./: .gitignore  README.md  Scarb.toml  indexer.db
bevy_frontend/: Cargo.toml  indexer.db
bevy_frontend/src/: lib.rs  main.rs
bevy_frontend/src/plugins/: .dojo_to_bevy.rs  .text.rs  constants.rs  cursor.rs  dojo_to_bevy.rs  example_dojo_models.json  guess_letter.rs  highlight_start.rs  image_visualize.rs  mock_torii.rs  mod.rs  solution_verifier.rs  switch_letter_status.rs  text.rs  torii.rs  visualize.rs
bevy_frontend/src/plugins/.bindgen/bevy/components/: mod.rs
bevy_frontend/src/plugins/bindgen/bevy/components/: letter.rs  letterstatus.rs
bevy_frontend/src/plugins/manual_bindgen/: mod.rs
manifests/dev/deployment/: manifest.json  manifest.toml
manifests/dev/deployment/abis/contracts/: dojo_starter-create_actions-4b24e094.json
manifests/dev/deployment/abis/models/: dojo_starter-Letter-3e09fe62.json  dojo_starter-LetterStatus-2d8b2e80.json
src/models/: board.cairo
src/systems/: create.cairo
src/tests/: test_letter.cairo
