[package]
name = "bevy_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
dojo-types = { git = "https://github.com/dojoengine/dojo.git", rev = "f1c521451eab22d240ae378f8b2a9c6ae981375f" }
starknet = "0.11.0"
cainome = { git = "https://github.com/cartridge-gg/cainome", rev = "7b0c2b369063fc1a34152ec999028a7e9dd093a3" }

# async-channel = "2.3.1"
# starknet-crypto = "0.7.0"
# starknet-types-core = "~0.1.4"
# tokio = "1.39.2"
# torii-client = { git = "https://github.com/dojoengine/dojo.git", rev = "f1c521451eab22d240ae378f8b2a9c6ae981375f" }
# torii-grpc = { git = "https://github.com/dojoengine/dojo.git", rev = "f1c521451eab22d240ae378f8b2a9c6ae981375f" }

[patch.crates-io]
starknet-core = { git = "https://github.com/kariy/starknet-rs", branch = "dojo-patch" }
# starknet-types-core = { git = "https://github.com/dojoengine/types-rs", rev = "289e2f0" }
